# tuya-open-sdk-for-device-board-t3

./: .gitignore  Kconfig  README.md  build_example.sh
t3_os/armino/tools/build_tools/part_table_tools/: gen_bk7256partitions.py
t3_os/armino/tools/build_tools/part_table_tools/config/: gen_files_list.txt
t3_os/tuya_app/: CMakeLists.txt
t3_os/tuya_app/main/: app_main.c
t3_os/tuya_libs/: CMakeLists.txt
tuyaos/: build_path  platform.mk
tuyaos/tuyaos_adapter/: CMakeLists.txt
tuyaos/tuyaos_adapter/include/adc/: tkl_adc.h
tuyaos/tuyaos_adapter/include/bluetooth/: tkl_bluetooth.h  tkl_bluetooth_bredr.h  tkl_bluetooth_def.h  tkl_bluetooth_mesh_def.h  tkl_bluetooth_mesh_device.h  tkl_bluetooth_mesh_prov.h  tkl_bluetooth_sm.h
tuyaos/tuyaos_adapter/include/flash/: tkl_flash.h
tuyaos/tuyaos_adapter/include/hci/: tkl_hci.h
tuyaos/tuyaos_adapter/include/i2c/: tkl_i2c.h
tuyaos/tuyaos_adapter/include/init/include/: tkl_init_cellular.h  tkl_init_common.h  tkl_init_nbiot.h  tkl_init_network.h  tkl_init_pm.h  tkl_init_system.h  tkl_init_wifi.h  tkl_init_wired.h
tuyaos/tuyaos_adapter/include/init/src/: tkl_init_common.c  tkl_init_network.c
tuyaos/tuyaos_adapter/include/network/: tkl_network.h
tuyaos/tuyaos_adapter/include/pm/: tkl_pm.h
tuyaos/tuyaos_adapter/include/pwm/: tkl_pwm.h
tuyaos/tuyaos_adapter/include/spi/: tkl_spi.h
tuyaos/tuyaos_adapter/include/system/: tkl_fs.h  tkl_memory.h  tkl_mutex.h  tkl_output.h  tkl_queue.h  tkl_system.h  tkl_thread.h
tuyaos/tuyaos_adapter/include/uart/: tkl_uart.h
tuyaos/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_hashmap.h  tuya_hlist.h  tuya_list.h  tuya_queue.h  tuya_ringbuf.h  tuya_slist.h  tuya_smartpointer.h  tuya_tools.h
tuyaos/tuyaos_adapter/include/utilities/src/: tuya_hashmap.c  tuya_list.c  tuya_queue.c  tuya_ringbuf.c  tuya_smartpointer.c  tuya_tools.c
tuyaos/tuyaos_adapter/include/wifi/: tkl_wifi.h  tkl_wifi_hostap.h
tuyaos/tuyaos_adapter/src/driver/: tkl_adc.c  tkl_flash.c  tkl_gpio.c  tkl_hci.c  tkl_i2c.c  tkl_pwm.c  tkl_rtc.c  tkl_spi.c  tkl_timer.c  tkl_uart.c  tkl_wakeup.c  tkl_watchdog.c  tkl_wifi.c
tuyaos/tuyaos_adapter/src/system/: tkl_memory.c  tkl_mutex.c  tkl_network.c  tkl_ota.c  tkl_output.c  tkl_queue.c  tkl_semaphore.c  tkl_sleep.c  tkl_system.c  tkl_thread.c
